Fix the final column in the table to prevent overflow

--- a/src/styles/pages/sites/[site_id]/settings/_team.scss
+++ b/src/styles/pages/sites/[site_id]/settings/_team.scss
@@ -11,7 +11,7 @@
 
   .table {
     .row {
-      grid-template-columns: repeat(5, 1fr);
+      grid-template-columns: 1fr 1fr 1fr 1fr 17.5rem;
     }
 
     .role {
